[package]
name = "zeke"
version = "0.1.1"
edition = "2021"
authors = ["Phillip England <phillip.mark.england@gmail.com>"]
description = "a http library for rust built on top of tokio"
license = "MIT"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.200", features = ["derive"] }
bincode = { version = "1.3.3" }
serde_json = { version = "1.0" }
chrono = "0.4"
