[package]
name = "zeke"
version = "0.1.6"
edition = "2021"
authors = ["Phillip England <phillip.mark.england@gmail.com>"]
description = "a http library for rust built on top of tokio"
license = "MIT"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
